# simlab-algorithms

./: .gitignore  FORMULA_ELEMENTOS.md  README.md  RELATORIO_ESTIMATIVAS.md  REPO_MAP.md  adjacency_builder.py  cooja-statistical-significance.ipynb  estimando-população-p2.md  exp-cooja.txt  filter-p1.ipynb  nddr.ipynb  notes.md  p1-init-and-repair.ipynb  p2-trajectory-coverage.ipynb  p3-building-blocks.ipynb  p3-path-blocks.ipynb  path_builder.py  random-seed.ipynb  requirements.txt  run_all.sh  test-nddr.ipynb  test-old.ipynb  test.ipynb
pop-estimator/: POPULATION_ESTIMATOR.md  README.md  my_run.json  pyproject.toml  run_cooja.json  run_surrogate.json
pop-estimator/examples/: example_block_results.csv  example_output.json  simple.json
pop-estimator/firmware/rpl-udp-csma/: Makefile  metrics-packet.h  node.c  root.c
pop-estimator/p2_population_estimator/: __init__.py  __main__.py  blocks.py  cli.py  complements.py  config.py  estimator.py  experiment.py  geometry.py  io.py  logging_utils.py  models.py  partitioning.py  statistics.py
pop-estimator/p2_population_estimator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pop-estimator/p2_population_estimator/evaluation/: __init__.py  base.py  cooja.py  parser.py  ssh_pool.py  surrogate.py
pop-estimator/results/p2_cooja_run_simple_1/: block_results.csv  population_estimate_result.json
pop-estimator/tests/: conftest.py  test_blocks.py  test_estimator.py  test_experiment.py  test_geometry.py  test_io.py  test_parser.py  test_partitioning.py  test_statistics.py  test_surrogate.py
(+80 files in other folders)
