[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p2-population-estimator"
version = "0.1.0"
description = "Population size estimator for NSGA-III on Problem P2 (Discrete Coverage with Mobility)."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "SimLab Algorithms" }
]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
ssh = [
    "paramiko>=3.4",
]
kmeans = [
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
p2-popest = "p2_population_estimator.cli:main"

[tool.setuptools]
packages = [
    "p2_population_estimator",
    "p2_population_estimator.evaluation",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
